--- a/contacto.html
+++ b/contacto.html
@@ -45,6 +45,7 @@
 
         input:focus, textarea:focus {
             outline: none;
+            border-bottom: 1px solid #000;
         }
 
         input[type=submit] {
@@ -83,10 +84,6 @@
 
         main li a {
             text-decoration: none;
-        }
-
-        .icon {
-            width: 24px;
         }
     </style>
 </head>
