--- a/index.html
+++ b/index.html
@@ -128,14 +128,20 @@
                 </a>
             </div>
         </div>
-        <div class="separator">NOTICIAS</div>
         <div class="news">
+            <h3 style="
+                margin: 0 0 2rem;
+                font-size: 1.5rem;
+                color: #af9571;
+                text-align: center;
+                font-weight: 900;
+            ">Noticias</h3>
             <div class="highlight_news">
                 <div class="main_news">
                     <div class="news_piece">
                         <a href="#">
                             <span class="news_title">Grandes resultados del Kendo Balear en el I Campeonato de España Infal y cadete</span>
-                            <img src="https://scontent-bcn1-1.cdninstagram.com/v/t39.30808-6/316666597_5531220600309238_3066519917230419411_n.jpg?stp=dst-jpg_e35_s1080x1080_sh0.08&_nc_ht=scontent-bcn1-1.cdninstagram.com&_nc_cat=110&_nc_ohc=51P_Tjz-yxgAX_eTIEx&edm=ACWDqb8AAAAA&ccb=7-5&ig_cache_key=Mjk4MDMzMjk3Nzc2NzMyODk2Mw%3D%3D.2-ccb7-5&oh=00_AfALdX1fA83V-pN5OcIsJmSzAKC1XchSfokVjx8tDum5JQ&oe=645731FB&_nc_sid=1527a3" alt="News 1">
+                            <img src="https://via.placeholder.com/800x600/3A568E/FFFFFF" alt="News 1">
                         </a>
                     </div>
                 </div>
@@ -143,13 +149,13 @@
                     <div class="news_piece">
                         <a href="#">
                             <span class="news_title">Curso de Aula de Formación en Mallorca</span>
-                            <img src="https://scontent-bcn1-1.cdninstagram.com/v/t39.30808-6/319696302_5576251519139479_7579817763860555817_n.jpg?stp=dst-jpg_e35_s1080x1080_sh0.08&_nc_ht=scontent-bcn1-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Z5plwt7BamQAX_gCiwP&edm=ACWDqb8AAAAA&ccb=7-5&ig_cache_key=Mjk5MDc3MDU5NTY3MTg5MzY3Mw%3D%3D.2-ccb7-5&oh=00_AfAXd0HeHtRHJnq7FUPCkIYhLydcvc_ThDgMaoUPzsXK1Q&oe=6457A81C&_nc_sid=1527a3" alt="News 2">
+                            <img src="https://via.placeholder.com/800x600/3A568E/FFFFFF" alt="News 2">
                         </a>
                     </div>
                     <div class="news_piece">
                         <a href="#">
                             <span class="news_title">Entrega de Diplomas de Monitor, Entrenador y Maestro Nacional de Aikido</span>
-                            <img src="https://scontent-bcn1-1.cdninstagram.com/v/t39.30808-6/315534510_5491825840915381_1311774991810473605_n.jpg?stp=dst-jpg_e35_s1080x1080_sh0.08&_nc_ht=scontent-bcn1-1.cdninstagram.com&_nc_cat=101&_nc_ohc=00IY4G-LNg0AX9l8n9A&edm=ACWDqb8AAAAA&ccb=7-5&ig_cache_key=Mjk3MDA3NjU4MDc0ODM5NjU3Mw%3D%3D.2-ccb7-5&oh=00_AfCHI7ukBHHGcLoobFX1XnZRHQQuC6ki-Y1VC8PxjKFgwQ&oe=64576441&_nc_sid=1527a3" alt="News 3">
+                            <img src="https://via.placeholder.com/800x600/3A568E/FFFFFF" alt="News 3">
                         </a>
                     </div>
                 </div>
@@ -158,7 +164,7 @@
                 <div class="news_piece">
                     <a href="#">
                         <span class="news_title">Curso Aula de formación Permanente de Defensa Personal</span>
-                        <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/343767177_3878170325742703_1797930318423015195_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=0debeb&_nc_ohc=I1rpXYcWXSgAX8vzWFz&_nc_ht=scontent-bcn1-1.xx&oh=00_AfAq-ac59GAcNkZgNEAL_jY7dzonqqZimAZ0h1vVt6rsBw&oe=6456F09D" alt="News 4">
+                        <img src="https://via.placeholder.com/800x600/3A568E/FFFFFF" alt="News 4">
                     </a>
                 </div>
                 <div class="news_piece">
@@ -204,6 +210,7 @@
                     </a>
                 </div>
             </div>
+            <span style="padding: .5rem;width: fit-content;align-self: center;margin-top: 2rem;border: 1px solid;cursor: pointer;">Ver más</span>
         </div>
         <div class="separator">CON EL SOPORTE DE:</div>
         <div class="sponsors">
@@ -217,16 +224,76 @@
                 <img src="./assets/img/C_AF_SOC_ESP_COL.png" alt="Govern de les Illes Balears">
             </div>
         </div>
+        <content class="dojo_locator" style="
+                                    height: 15em;
+                                    display: flex;
+                                    background-image: url('./assets/img/locator_background.jpg');
+                                    width: 100%;
+                                    gap: 2em;
+                                    background-position: center;
+                                    justify-content: space-around;
+                                    box-sizing: border-box;
+                                    background-size: cover;
+                                    padding: 2em 5em;
+                                ">
+            <div style="
+                                    width: 50%;
+                                    box-sizing: unset;
+                                    color: white;
+                                ">
+                <h3 style="
+                                    font-size: 2em;
+                                    margin: 0;
+                                ">Encuentra tu dojo más cercano</h3>
+                <p style="
+                                    margin: 0 0 2em;
+                                ">Utiliza nuestra herramienta de búsqueda para encontrar el dojo más cercano a tu ubicación.
+                </p><span style="
+                                    padding: .5em;
+                                    border: 1px solid;
+                                ">Encuentra tu dojo</span>
+            </div>
+            <div style="
+                    width: 50%;
+                    display: flex;
+                    justify-content: center;
+                ">
+                <div style="
+                    position: relative;
+                    display: flex;
+                    justify-content: center;
+                ">
+                    <img src="./assets/img/illes_balears.svg" style="height: 100%;"><img src="./assets/icons/location_map.svg" style="
+                        height: 1em;
+                        position: absolute;
+                        top: 3em;
+                        left: 10em;
+                    ">
+                    <img src="./assets/icons/location_map.svg" style="
+                        height: 1em;
+                        position: absolute;
+                        top: 0em;
+                        left: 16.5em;
+                    ">
+                    <img src="./assets/icons/location_map.svg" style="
+                        height: 1em;
+                        position: absolute;
+                        bottom: 2em;
+                        left: .75em;
+                    ">
+                </div>
+            </div>
+        </content>
     </main>
     <footer>
         <div class="columns">
             <div class="column rrss">
                 <div class="footer_column_body">
                     <ul>
-                        <li><img class="icon" src="./assets/icons/instagram.svg"/><a target="_blank" href="https://www.instagram.com/fbaljyda/">Instagram</a></li>
-                        <li><img class="icon" src="./assets/icons/facebook.svg"/><a target="_blank" href="https://www.facebook.com/profile.php?id=100002640585987">Facebook</a></li>
+                        <li><img class="icon" src="./assets/icons/facebook.svg"><a target="_blank" href="https://www.facebook.com/profile.php?id=100002640585987">Facebook</a></li>
+                        <li><img class="icon" src="./assets/icons/instagram.svg"><a target="_blank" href="https://www.instagram.com/fbaljyda/">Instagram</a></li>
                         <li><img class="icon" src="./assets/icons/twitter.svg"/><a target="_blank" href="https://twitter.com/fbjyda">Twitter</a></li>
-                        <li><img class="icon" src="./assets/icons/youtube.svg"/><a target="_blank" href="https://www.youtube.com/channel/UCm8bD4smgksU13BzC0tur7g">YouTube</a></li>
+                        <li><img class="icon" src="./assets/icons/youtube.svg"><a target="_blank" href="https://www.youtube.com/channel/UCm8bD4smgksU13BzC0tur7g">YouTube</a></li>
                     </ul>
                 </div>
             </div>
@@ -234,6 +301,7 @@
                 <div class="footer_column_body">
                     <ul>
                         <li class="footer_column_info_category_title"><a href="#">Información General</a>
+                        </li>
                         <li><a href="#">Organigrama</a></li>
                         <li><a href="#">Censo Electoral 2020-2024</a></li>
                         <li><a href="#">Estatutos y Reglamentos</a></li>
@@ -243,10 +311,15 @@
                     </ul>
                     <ul>
                         <li class="footer_column_info_category_title"><a href="#">Escuela Federativa</a>
+                        </li>
                         <li><a href="#">Formación</a>
+                        </li>
                         <li><a href="#">Programas</a>
+                        </li>
                         <li><a href="#">Normativa EFN</a>
+                        </li>
                         <li><a href="#">Calendario EFN</a>
+                        </li>
                     </ul>
                     <ul>
                         <li class="footer_column_info_category_title"><a href="#">Clubs Baleares</a></li>
@@ -268,13 +341,29 @@
             <div class="column">
                 <div class="footer_column_body">
                     <ul>
-                        <li><img class="icon" src="./assets/icons/telephone.svg"/><a href="tel:+34971461109">(+34) 971 461 109</a></li>
-                        <li><img class="icon" src="./assets/icons/email-433830.svg"/><a href="mailto:secretariageneralfbjudo@gmail.com">secretariageneralfbjudo@gmail.com</a></li>
+                        <li><img class="icon" src="./assets/icons/call.svg">
+                            <a href="tel:+34971461109">(+34) 971 461 109</a>
+                        </li>
                         <li>
-                            <img class="icon" src="./assets/icons/location-433840.svg"/>
+                            <img class="icon" src="./assets/icons/email.svg">
+                            <a href="mailto:secretariageneralfbjudo@gmailcom">
+                                secretariageneralfbjudo@gmailcom
+                            </a>
+                        </li>
+                        <li>
+                            <img class="icon" src="./assets/icons/location.svg">
                             <div class="address">
-                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">Avinguda Uruguay, S/N, 07010, Palma</a>
-                                <span>Lunes-Viernes de 9:00 a 14:00</span>
+                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">
+                                    Avinguda Uruguay, S/N, 07010, Palma
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="icon" src="./assets/icons/clock.svg">
+                            <div class="address">
+                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">
+                                    Lunes-Viernes de 9:00 a 14:00
+                                </a>
                             </div>
                         </li>
                     </ul>
