--- a/index.html
+++ b/index.html
@@ -129,13 +129,7 @@
             </div>
         </div>
         <div class="news">
-            <h3 style="
-                margin: 0 0 2rem;
-                font-size: 1.5rem;
-                color: #af9571;
-                text-align: center;
-                font-weight: 900;
-            ">Noticias</h3>
+            <h3>Noticias</h3>
             <div class="highlight_news">
                 <div class="main_news">
                     <div class="news_piece">
@@ -212,16 +206,24 @@
             </div>
             <span style="padding: .5rem;width: fit-content;align-self: center;margin-top: 2rem;border: 1px solid;cursor: pointer;">Ver más</span>
         </div>
-        <div class="separator">CON EL SOPORTE DE:</div>
-        <div class="sponsors">
-            <div class="sponsor larg_width">
-                <img src="./assets/img/Dep.Transicio╠ü-Turisme-i-Esports.png" alt="Consell de Mallorca">
-            </div>
-            <div class="sponsor">
-                <img src="./assets/img/cropped-Logo_fede-2.png" alt="FBJYDA">
-            </div>
-            <div class="sponsor">
-                <img src="./assets/img/C_AF_SOC_ESP_COL.png" alt="Govern de les Illes Balears">
+        <div class="">
+            <h3 style="
+            font-size: 1.5rem;
+            color: rgb(104 104 104);
+            text-align: center;
+            font-weight: 900;
+            margin-bottom: .5rem;
+            ">Con el soporte de</h3>
+            <div class="sponsors">
+                <div class="sponsor larg_width">
+                    <img src="./assets/img/Dep.Transicio╠ü-Turisme-i-Esports.png" alt="Consell de Mallorca">
+                </div>
+                <div class="sponsor">
+                    <img src="./assets/img/cropped-Logo_fede-2.png" alt="FBJYDA">
+                </div>
+                <div class="sponsor">
+                    <img src="./assets/img/C_AF_SOC_ESP_COL.png" alt="Govern de les Illes Balears">
+                </div>
             </div>
         </div>
         <content class="dojo_locator" style="
@@ -235,6 +237,7 @@
                                     box-sizing: border-box;
                                     background-size: cover;
                                     padding: 2em 5em;
+                                    overflow: hidden;
                                 ">
             <div style="
                                     width: 50%;
