Deleting inline CSS

--- a/aikido.html
+++ b/aikido.html
@@ -276,60 +276,19 @@
                 </div>
             </div>
         </div>
-        <content class="dojo_locator" style="
-                                    height: 15em;
-                                    display: flex;
-                                    background-image: url('./assets/img/locator_background.jpg');
-                                    width: 100%;
-                                    gap: 2em;
-                                    background-position: center;
-                                    justify-content: space-around;
-                                    box-sizing: border-box;
-                                    background-size: cover;
-                                    padding: 2em 5em;
-                                ">
-            <div style="
-                                    width: 50%;
-                                    box-sizing: unset;
-                                    color: white;
-                                ">
-                <h3 style="
-                                    font-size: 2em;
-                                    margin: 0;
-                                ">Encuentra tu dojo más cercano</h3>
-                <p style="
-                                    margin: 0 0 2em;
-                                ">Utiliza nuestra herramienta de búsqueda para encontrar el dojo más cercano a tu ubicación.
-                </p><span style="
-                                    padding: .5em;
-                                    border: 1px solid;
-                                ">Encuentra tu dojo</span>
+        <content class="dojo_locator">
+            <div class="dojo_locator_text">
+                <h3>Encuentra tu dojo más cercano</h3>
+                <p>Utiliza nuestra herramienta de búsqueda para encontrar el dojo más cercano a tu ubicación.</p>
+                <span>Encuentra tu dojo</span>
             </div>
-            <div style="
-                    width: 50%;
-                    display: flex;
-                    justify-content: center;
-                ">
-                <div style="
-            position: relative;
-            display: flex;
-            justify-content: center;
-        "><img src="./assets/img/illes_balears.svg" style="height: 100%;"><img src="./assets/icons/location_map.sVg" style="
-            height: 1em;
-            position: absolute;
-            top: 3em;
-            left: 10em;
-        "><img src="./assets/icons/location_map.svg?hola" style="
-            height: 1em;
-            position: absolute;
-            top: 0em;
-            left: 16.5em;
-        "><img src="./assets/icons/location_map.svg?hola" style="
-            height: 1em;
-            position: absolute;
-            bottom: 2em;
-            left: .75em;
-        "></div>
+            <div class="locator_banner_map">
+                <div>
+                    <img class="illes_balears" src="./assets/img/illes_balears.svg" style="height: 100%;">
+                    <img class="pointer locator_banner_map_pointer_first" src="./assets/icons/location_map.svg">
+                    <img class="pointer locator_banner_map_pointer_second" src="./assets/icons/location_map.svg">
+                    <img class="pointer locator_banner_map_pointer_third" src="./assets/icons/location_map.svg">
+                </div>
             </div>
         </content>
     </main>
