--- a/locator.html
+++ b/locator.html
@@ -256,7 +256,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -271,7 +271,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -286,7 +286,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -301,7 +301,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -316,7 +316,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -331,7 +331,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -346,7 +346,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -361,7 +361,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -376,7 +376,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -391,7 +391,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -406,7 +406,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -421,7 +421,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -436,7 +436,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -451,7 +451,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -466,7 +466,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
@@ -481,7 +481,7 @@
                         <div class="dojo_card">
                             <span class="art_type">AIKIDO</span>
                             <div class="dojo_logo">
-                                <img src="https://scontent-bcn1-1.xx.fbcdn.net/v/t39.30808-6/298722474_462743979193354_5500915388495560171_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=IGCvB7ErSL0AX_yJuAo&_nc_ht=scontent-bcn1-1.xx&oh=00_AfBoGBG4j3p3GHLPCsRCQQ9cW-hDLAxL4L9cWsSgUrKavQ&oe=647B0307" alt="Dojo Logo">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRW1VK_FoQcx7BaiwWizVIn03Yss1Ltl6V6-w&usqp=CAU" alt="Dojo Logo">
                             </div>
                             <div class="dojo_desc">
                                 <span class="dojo_title">Centro Aikido Takemusu</span>
