--- a/antidopaje.html
+++ b/antidopaje.html
@@ -96,6 +96,21 @@
             <p>En esta sección se recoge una selección de las principales legislaciones que rigen en materia de prevención de dopaje y protección de la salud a nivel nacional (normativa básica, en materia de control de dopaje, sancionadora, de precios públicos del Laboratorio de Control del Dopaje y otra normativa) e internacional.</p>
             <p><a target="_blank" href="https://celad.culturaydeporte.gob.es"><img width="100%" height="auto" src="https://celad.culturaydeporte.gob.es/.imaging/mte/micrositios-theme/cabecera-fondoCabecera/dam/micrositios/aepsad/admin/banner-home-web-celad/jcr:content/banner-home-web-celad.jpg" /></a></p>
         </section>
+        <content class="dojo_locator">
+            <div class="dojo_locator_text">
+                <h3>Encuentra tu dojo más cercano</h3>
+                <p>Utiliza nuestra herramienta de búsqueda para encontrar el dojo más cercano a tu ubicación.</p>
+                <span>Encuentra tu dojo</span>
+            </div>
+            <div class="locator_banner_map">
+                <div>
+                    <img class="illes_balears" src="./assets/img/illes_balears.svg" style="height: 100%;">
+                    <img class="pointer locator_banner_map_pointer_first" src="./assets/icons/location_map.svg">
+                    <img class="pointer locator_banner_map_pointer_second" src="./assets/icons/location_map.svg">
+                    <img class="pointer locator_banner_map_pointer_third" src="./assets/icons/location_map.svg">
+                </div>
+            </div>
+        </content>
     </main>
     <footer>
         <div class="columns">
