--- a/calendario.html
+++ b/calendario.html
@@ -100,6 +100,21 @@
             <h2>Calendario</h2>
             <iframe id="calendar" src="https://calendar.google.com/calendar/embed?height=600&wkst=2&bgcolor=%23ffffff&ctz=Europe%2FMadrid&showTitle=0&showNav=1&showDate=1&showTabs=0&showCalendars=0&showTz=0&src=aTZqYnI5Z2Rjcms2NmU1Y3NsMXVmanV0czRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&color=%234285F4" style="border-width:0" frameborder="0" scrolling="no"></iframe>
         </section>
+        <content class="dojo_locator">
+            <div class="dojo_locator_text">
+                <h3>Encuentra tu dojo más cercano</h3>
+                <p>Utiliza nuestra herramienta de búsqueda para encontrar el dojo más cercano a tu ubicación.</p>
+                <span>Encuentra tu dojo</span>
+            </div>
+            <div class="locator_banner_map">
+                <div>
+                    <img class="illes_balears" src="./assets/img/illes_balears.svg" style="height: 100%;">
+                    <img class="pointer locator_banner_map_pointer_first" src="./assets/icons/location_map.svg">
+                    <img class="pointer locator_banner_map_pointer_second" src="./assets/icons/location_map.svg">
+                    <img class="pointer locator_banner_map_pointer_third" src="./assets/icons/location_map.svg">
+                </div>
+            </div>
+        </content>
     </main>
     <footer>
         <div class="columns">
