--- a/visor-pdf.html
+++ b/visor-pdf.html
@@ -95,6 +95,21 @@
             <h2>Ley de Transparencia</h2>
             <embed src="https://www.rfejudo.com/documentos/convocatorias/Teplice-Cadet-European-Cup-2023.pdf" width="100%" height="1200" alt="pdf" pluginspage="http://www.adobe.com/products/acrobat/readstep2.html">
         </section>
+        <content class="dojo_locator">
+            <div class="dojo_locator_text">
+                <h3>Encuentra tu dojo más cercano</h3>
+                <p>Utiliza nuestra herramienta de búsqueda para encontrar el dojo más cercano a tu ubicación.</p>
+                <span>Encuentra tu dojo</span>
+            </div>
+            <div class="locator_banner_map">
+                <div>
+                    <img class="illes_balears" src="./assets/img/illes_balears.svg" style="height: 100%;">
+                    <img class="pointer locator_banner_map_pointer_first" src="./assets/icons/location_map.svg">
+                    <img class="pointer locator_banner_map_pointer_second" src="./assets/icons/location_map.svg">
+                    <img class="pointer locator_banner_map_pointer_third" src="./assets/icons/location_map.svg">
+                </div>
+            </div>
+        </content>
     </main>
     <footer>
         <div class="columns">
