--- a/noticia.html
+++ b/noticia.html
@@ -135,7 +135,7 @@
     <main>
         <div style="width: 100%;display: flex;height: calc(100vh - 5em);">
             <div style="width: 65%;overflow: hidden;justify-content: center;display: flex;position: relative;">
-                <img src="https://scontent-bcn1-1.cdninstagram.com/v/t39.30808-6/316666597_5531220600309238_3066519917230419411_n.jpg?stp=dst-jpg_e35_s1080x1080_sh0.08&_nc_ht=scontent-bcn1-1.cdninstagram.com&_nc_cat=110&_nc_ohc=o5OrY_ncJkYAX8z26eW&edm=ACWDqb8AAAAA&ccb=7-5&ig_cache_key=Mjk4MDMzMjk3Nzc2NzMyODk2Mw%3D%3D.2-ccb7-5&oh=00_AfCZd-UZPsfwv8mOccbqeKU6MzFVCtyxEgqahg6laU4stA&oe=6482B37B&_nc_sid=640168" alt="Imagen 1" style="position: relative; width: auto; height: 100%; object-fit: cover;">
+                <img src="https://via.placeholder.com/1600x1080/000/FFFFFF" alt="Imagen 1" style="position: relative; width: auto; height: 100%; object-fit: cover;">
             </div>
             <div style="width: 35%; height: 100%;">
                 <div style="padding: 5em;height: 100%;box-sizing: border-box;display: flex;flex-direction: column;justify-content: center;">
@@ -162,60 +162,19 @@
                 </div>
             </div>
         </div>
-        <content class="dojo_locator" style="
-                                    height: 15em;
-                                    display: flex;
-                                    background-image: url('./assets/img/locator_background.jpg');
-                                    width: 100%;
-                                    gap: 2em;
-                                    background-position: center;
-                                    justify-content: space-around;
-                                    box-sizing: border-box;
-                                    background-size: cover;
-                                    padding: 2em 5em;
-                                ">
-            <div style="
-                                    width: 50%;
-                                    box-sizing: unset;
-                                    color: white;
-                                ">
-                <h3 style="
-                                    font-size: 2em;
-                                    margin: 0;
-                                ">Encuentra tu dojo más cercano</h3>
-                <p style="
-                                    margin: 0 0 2em;
-                                ">Utiliza nuestra herramienta de búsqueda para encontrar el dojo más cercano a tu ubicación.
-                </p><span style="
-                                    padding: .5em;
-                                    border: 1px solid;
-                                ">Encuentra tu dojo</span>
+        <content class="dojo_locator">
+            <div class="dojo_locator_text">
+                <h3>Encuentra tu dojo más cercano</h3>
+                <p>Utiliza nuestra herramienta de búsqueda para encontrar el dojo más cercano a tu ubicación.</p>
+                <span>Encuentra tu dojo</span>
             </div>
-            <div style="
-                    width: 50%;
-                    display: flex;
-                    justify-content: center;
-                ">
-                <div style="
-            position: relative;
-            display: flex;
-            justify-content: center;
-        "><img src="./assets/img/illes_balears.svg" style="height: 100%;"><img src="./assets/icons/location_map.sVg" style="
-            height: 1em;
-            position: absolute;
-            top: 3em;
-            left: 10em;
-        "><img src="./assets/icons/location_map.svg?hola" style="
-            height: 1em;
-            position: absolute;
-            top: 0em;
-            left: 16.5em;
-        "><img src="./assets/icons/location_map.svg?hola" style="
-            height: 1em;
-            position: absolute;
-            bottom: 2em;
-            left: .75em;
-        "></div>
+            <div class="locator_banner_map">
+                <div>
+                    <img class="illes_balears" src="./assets/img/illes_balears.svg" style="height: 100%;">
+                    <img class="pointer locator_banner_map_pointer_first" src="./assets/icons/location_map.svg">
+                    <img class="pointer locator_banner_map_pointer_second" src="./assets/icons/location_map.svg">
+                    <img class="pointer locator_banner_map_pointer_third" src="./assets/icons/location_map.svg">
+                </div>
             </div>
         </content>
     </main>
