--- a/antidopaje.html
+++ b/antidopaje.html
@@ -117,9 +117,10 @@
             <div class="column rrss">
                 <div class="footer_column_body">
                     <ul>
-                        <li><img class="icon" src="./assets/icons/instagram.svg"/><a target="_blank" href="https://www.instagram.com/fbaljyda/">Instagram</a></li>
-                        <li><img class="icon" src="./assets/icons/facebook.svg"/><a target="_blank" href="https://www.facebook.com/profile.php?id=100002640585987">Facebook</a></li>
-                        <li><img class="icon" src="./assets/icons/youtube.svg"/><a target="_blank" href="https://www.youtube.com/channel/UCm8bD4smgksU13BzC0tur7g">YouTube</a></li>
+                        <li><img class="icon" src="./assets/icons/facebook.svg"><a target="_blank" href="https://www.facebook.com/profile.php?id=100002640585987">Facebook</a></li>
+                        <li><img class="icon" src="./assets/icons/instagram.svg"><a target="_blank" href="https://www.instagram.com/fbaljyda/">Instagram</a></li>
+                        <li><img class="icon" src="./assets/icons/twitter.svg"/><a target="_blank" href="https://twitter.com/fbjyda">Twitter</a></li>
+                        <li><img class="icon" src="./assets/icons/youtube.svg"><a target="_blank" href="https://www.youtube.com/channel/UCm8bD4smgksU13BzC0tur7g">YouTube</a></li>
                     </ul>
                 </div>
             </div>
@@ -127,6 +128,7 @@
                 <div class="footer_column_body">
                     <ul>
                         <li class="footer_column_info_category_title"><a href="#">Información General</a>
+                        </li>
                         <li><a href="#">Organigrama</a></li>
                         <li><a href="#">Censo Electoral 2020-2024</a></li>
                         <li><a href="#">Estatutos y Reglamentos</a></li>
@@ -136,10 +138,15 @@
                     </ul>
                     <ul>
                         <li class="footer_column_info_category_title"><a href="#">Escuela Federativa</a>
+                        </li>
                         <li><a href="#">Formación</a>
+                        </li>
                         <li><a href="#">Programas</a>
+                        </li>
                         <li><a href="#">Normativa EFN</a>
+                        </li>
                         <li><a href="#">Calendario EFN</a>
+                        </li>
                     </ul>
                     <ul>
                         <li class="footer_column_info_category_title"><a href="#">Clubs Baleares</a></li>
@@ -161,13 +168,29 @@
             <div class="column">
                 <div class="footer_column_body">
                     <ul>
-                        <li><img class="icon" src="./assets/icons/telephone.svg"/><a href="tel:+34971461109">(+34) 971 461 109</a></li>
-                        <li><img class="icon" src="./assets/icons/email-433830.svg"/><a href="mailto:secretariageneralfbjudo@gmail.com">secretariageneralfbjudo@gmail.com</a></li>
+                        <li><img class="icon" src="./assets/icons/call.svg">
+                            <a href="tel:+34971461109">(+34) 971 461 109</a>
+                        </li>
                         <li>
-                            <img class="icon" src="./assets/icons/location-433840.svg"/>
+                            <img class="icon" src="./assets/icons/email.svg">
+                            <a href="mailto:secretariageneralfbjudo@gmailcom">
+                                secretariageneralfbjudo@gmailcom
+                            </a>
+                        </li>
+                        <li>
+                            <img class="icon" src="./assets/icons/location.svg">
                             <div class="address">
-                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">Avinguda Uruguay, S/N, 07010, Palma</a>
-                                <span>Lunes-Viernes de 9:00 a 14:00</span>
+                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">
+                                    Avinguda Uruguay, S/N, 07010, Palma
+                                </a>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="icon" src="./assets/icons/clock.svg">
+                            <div class="address">
+                                <a target="_blank" href="https://goo.gl/maps/HZSjBhcYcpSUTfj29">
+                                    Lunes-Viernes de 9:00 a 14:00
+                                </a>
                             </div>
                         </li>
                     </ul>
